--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 </head>
 <body class="d-md-none">
     <!-- splashscreen starts -->
-    <div class="container-fluid h-100 w-100 align-items-center" id="splashscreen" style="display: flex;">
+    <!-- <div class="container-fluid h-100 w-100 align-items-center" id="splashscreen" style="display: flex;">
         <img src="./images/splashscreen.svg" alt="logo" class="img-fluid d-block m-auto">
-    </div>
+    </div> -->
     <!-- splashscreen ends -->
 
     <!-- get started screen starts -->
