--- a/html/forgetpassword2.html
+++ b/html/forgetpassword2.html
@@ -13,12 +13,12 @@
         <img src="../images/Left Arrow 2.svg" alt="back" class="img-fluid me-2" role="button">Forgot Password.
     </h1>
     <form action="#">
-        <fieldset class="row row-cols-6 justify-content-center">
-            <input type="number" class="col-1 me-3">
-            <input type="number" class="col-1 me-3">
-            <input type="number" class="col-1 me-3">
-            <input type="number" class="col-1 me-3">
-            <input type="number" class="col-1 me-3">
+        <fieldset class="row row-cols-6 justify-content-center mt-5">
+            <input type="number" class="col-1 me-2">
+            <input type="number" class="col-1 me-2">
+            <input type="number" class="col-1 me-2">
+            <input type="number" class="col-1 me-2">
+            <input type="number" class="col-1 me-2">
             <input type="number" class="col-1 me">
         </fieldset>
         <button class="btn d-block text-white d-flex align-items-center justify-content-center primary-font fs-6 w-100 py-3 rounded-4 text-decoration-none my-5" id="login-btn">Continue<img src="../images/Right Arrow 2.svg" alt="right arrow" class="img-fluid mx-2"></button>
