--- a/html/index.html
+++ b/html/index.html
@@ -8,14 +8,14 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.js"></script>
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <link rel="stylesheet" href="../styles/main.css">
+    <link rel="stylesheet" href="./styles/main.css">
     <title>EsGaurd</title>
 </head>
 <body class="d-md-none">
     <!-- splashscreen starts -->
-    <div class="container-fluid h-100 w-100 align-items-center" id="splashscreen" style="display: flex;">
-        <img src="../images/splashscreen.svg" alt="logo" class="img-fluid d-block m-auto">
-    </div>
+    <!-- <div class="container-fluid h-100 w-100 align-items-center" id="splashscreen" style="display: flex;">
+        <img src="./images/splashscreen.svg" alt="logo" class="img-fluid d-block m-auto">
+    </div> -->
     <!-- splashscreen ends -->
 
     <!-- get started screen starts -->
@@ -26,7 +26,7 @@
                 Security is very essential, Keep track of the people in the estate.
             </p>
         </div>
-        <a class="btn d-block text-white d-flex align-items-center justify-content-center primary-font fs-6 w-100 py-3 rounded-4 text-decoration-none" href="./login.html">Get Started <img src="../images/Right Arrow 2.svg" alt="right arrow" class="img-fluid mx-2"></a>
+        <a class="btn d-block text-white d-flex align-items-center justify-content-center primary-font fs-6 w-100 py-3 rounded-4 text-decoration-none" href="./html/login.html">Get Started <img src="../images/Right Arrow 2.svg" alt="right arrow" class="img-fluid mx-2"></a>
     </div>
     <!-- get started screen ends -->
 
