--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./styles/main.css">
     <title>EsGaurd</title>
 </head>
-<body class="d-md-none">
+<body class="">
     <!-- splashscreen starts -->
     <!-- <div class="container-fluid h-100 w-100 align-items-center" id="splashscreen" style="display: flex;">
         <img src="./images/splashscreen.svg" alt="logo" class="img-fluid d-block m-auto">
