--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,32 +8,54 @@
     <!-- jquery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.js"></script>
     <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="./styles/main.css">
     <title>EsGaurd</title>
 </head>
-<body class="d-md-none">
-    <!-- splashscreen starts -->
-    <!-- <div class="container-fluid h-100 w-100 align-items-center" id="splashscreen" style="display: flex;">
-        <img src="./images/splashscreen.svg" alt="logo" class="img-fluid d-block m-auto">
-    </div> -->
-    <!-- splashscreen ends -->
 
-    <!-- get started screen starts -->
-    <div class="container-fluid vh-100 vw-100 flex-column align-items-start justify-content-end pb-5" id="index-screen" style="padding: 0px 30px; display: none;">
-        <div class="text-white mb-4">
-            <h3 class="primary-font">Estate Security</h3>
-            <p class="secondary-font">
-                Security is very essential, Keep track of the people in the estate.
-            </p>
+<body class="d-md-none">
+    <!-- preloader starts -->
+    <section class="preloader w-100 h-100">
+        <div class="w-100 h-100 d-flex flex-column justify-content-center align-items-center">
+            <img class="sheild mb-3" src="./images/Vector.png" alt="EsGaurdLogo">
+            <img class="name" src="./images/ESGUARD.png" alt="EsGaurdLogo">
         </div>
-        <a class="btn d-block text-white d-flex align-items-center justify-content-center primary-font fs-6 w-100 py-3 rounded-4 text-decoration-none" href="./html/login.html">Get Started <img src="../images/Right Arrow 2.svg" alt="right arrow" class="img-fluid mx-2"></a>
-    </div>
-    <!-- get started screen ends -->
+    </section>
+    <!-- preloader ends -->
+
+    <section class="main-content" style="display: none;">
+
+        <!-- get started screen starts -->
+        <div class="container-fluid vh-100 vw-100 flex-column align-items-start justify-content-end pb-5 pt-3"
+            id="index-screen" style="padding: 0px 30px;">
+            <div class="text-white mb-4">
+                <h3 class="primary-font">Estate Security</h3>
+                <p class="secondary-font">
+                    Security is very essential, Keep track of the people in the estate.
+                </p>
+            </div>
+            <a class="btn d-block text-white d-flex align-items-center justify-content-center primary-font fs-6 w-100 py-3 rounded-4 text-decoration-none"
+                style="margin-top: 400px;" href="./html/login.html">Get Started <img src="./images/Right Arrow 2.svg"
+                    alt="right arrow" class="img-fluid mx-2"></a>
+        </div>
+        <!-- get started screen ends -->
+    </section>
 
     <!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+        crossorigin="anonymous"></script>
     <!-- custom JS -->
     <script src="../scripts/index.js"></script>
+    <script>
+        $(document).ready(function () {
+            setTimeout(function () {
+                $('.preloader').fadeOut(1500);
+                $('.main-content').fadeIn(2000);
+            }, 1500);
+        })
+    </script>
 </body>
+
 </html>
