--- a/html/code-profile.html
+++ b/html/code-profile.html
@@ -1,54 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <link rel="stylesheet" href="../styles/main.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous" />
+    <link rel="stylesheet" href="../styles/main.css" />
     <title>EsGaurd</title>
-</head>
-<body class="d-md-none" style="padding: 30px;">
+  </head>
+  <body class="d-md-none" style="padding: 30px">
     <nav class="fixed-bottom p-2 d-flex align-items-center">
-        <div class="container-fluid d-flex align-items-center justify-content-center p-0">
-            <div class="row row-cols-3 justify-content-between align-items-center w-100 secondary-font">
-                <div class="col d-flex flex-column align-items-center justify-content-between title-text">
-                    <img src="../images/Home.svg" alt="home" class="img-fluid">
-                    Home
-                </div>
-                <div class="col d-flex flex-column align-items-center justify-content-center secondary-text">
-                    <img src="../images/User.svg" alt="profile" class="img-fluid">
-                    Profile
-                </div>
-            </div>
+      <div class="container-fluid d-flex align-items-center justify-content-center p-0">
+        <div class="row row-cols-3 justify-content-between align-items-center w-100 secondary-font">
+          <div class="col d-flex flex-column align-items-center justify-content-between title-text">
+            <img src="../images/Home.svg" alt="home" class="img-fluid" />
+            Home
+          </div>
+          <div class="col d-flex flex-column align-items-center justify-content-center secondary-text">
+            <img src="../images/User.svg" alt="profile" class="img-fluid" />
+            Profile
+          </div>
         </div>
+      </div>
     </nav>
+
     <header class="d-flex align-items-center mb-3">
-        <a href="./estate-management-home.html" class="text-decoration-none d-flex"><img src="../images/Left Arrow 2.svg" alt="back" class="img-fluid me-2"></a> <span class="fs-2 fw-bold primary-font">Visitors Information</span>
+      <a href="./estate-management-home.html" class="text-decoration-none d-flex"><img src="../images/Left Arrow 2.svg" alt="back" class="img-fluid me-2" /></a> <span class="fs-2 fw-bold primary-font">Visitors Information</span>
     </header>
     <div class="container-fluid mt-2 h-75 position-relative">
-        <div class="row row-cols-1 align-items-center justify-content-center">
-            <div class="px-0 py-3 mb-2">
-                <div class="row">
-                    <span class="col-12 secondary-text secondary-font">Name</span>
-                    <span class="primary-font title-text fw-bold col-12">Alan Abel</span>
-                </div>
-            </div>
-            <div class="px-0 py-3 mb-2">
-                <div class="row">
-                    <span class="col-12 secondary-text secondary-font">Phone number</span>
-                    <span class="primary-font title-text fw-bold col-12">09039480597</span>
-                </div>
-            </div>
-            <div class="px-0 py-3 mb-2">
-                <div class="row">
-                    <span class="col-12 secondary-text secondary-font">Visiting</span>
-                    <span class="primary-font title-text fw-bold col-12">Darrel Steward, House 30</span>
-                </div>
-            </div>
+      <div class="row row-cols-1 align-items-center justify-content-center">
+        <div class="px-0 py-3 mb-2">
+          <div class="row">
+            <span class="col-12 secondary-text secondary-font">Name</span>
+            <span class="primary-font title-text fw-bold col-12">Alan Abel</span>
+          </div>
         </div>
+        <div class="px-0 py-3 mb-2">
+          <div class="row">
+            <span class="col-12 secondary-text secondary-font">Phone number</span>
+            <span class="primary-font title-text fw-bold col-12">09039480597</span>
+          </div>
+        </div>
+        <div class="px-0 py-3 mb-2">
+          <div class="row">
+            <span class="col-12 secondary-text secondary-font">Visiting</span>
+            <span class="primary-font title-text fw-bold col-12">Darrel Steward, House 30</span>
+          </div>
+        </div>
+      </div>
     </div>
-
-</body>
+  </body>
 </html>
