--- a/html/security-home.html
+++ b/html/security-home.html
@@ -28,7 +28,7 @@
         <h1 class="fw-bolder mb-0 primary-font"> Welcome Back</h1>
         <div class="secondary-font fw-bold">Charles Smith</div>
     </header>
-    <form action="#" class="my-2">
+    <form action="./security-visitation.html" class="my-2">
         <div class="form-floating mb-3">
             <input type="text" class="form-control" id="visitor-code-el" placeholder="Visitation Code">
             <label for="visitation-code-el">Visitation Code</label>
